@@ -1,3 +1,8 @@
+2016-01-07  c.hetherington  <cth@carlh.net>
+
+	* Sort image files added using "Add file(s)..." alphabetically
+	rather than trying to find numbers in the filenames.
+
 2016-01-07  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.6.12 released.
